enable relative cloud font sizing (500px), fix escape characters

--- a/wordCloud.html
+++ b/wordCloud.html
@@ -12,7 +12,7 @@ Author: Lily Bhattacharjee
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <!-- references word cloud formatting files in same directory -->
-    <script src="d3-cloud/d3.layout.cloud.js"></script>
+    <script src="d3-cloud/build/d3.layout.cloud.js"></script>
 
     <!-- jQuery cdn file -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
