min.js file was not secure, changed to full form

--- a/wordCloud.html
+++ b/wordCloud.html
@@ -9,7 +9,7 @@ Author: Lily Bhattacharjee
     <title>Facebook Chat Word Frequency Cloud</title>
 
     <!-- d3 cdn file -->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.js" charset="utf-8"></script>
 
     <!-- references word cloud formatting files in same directory -->
     <script src="d3-cloud/build/d3.layout.cloud.js"></script>
